log/build_2024-05-07_22-20-39/my_package/stderr.log
  File "/home/suho/mid/install/my_package/lib/python3.8/site-packages/my_package/my_node.py", line 35
    index_path = os.path.join(pkg_path, templates/index.html')
                                                             ^
SyntaxError: EOL while scanning string literal

